--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -64,13 +63,10 @@
   </style>
 </head>
 <body>
-
-
-<header style="background-color: #003366; color: white; padding: 40px 20px; text-align: center;">
+  <header style="background-color: #003366; color: white; padding: 40px 20px; text-align: center;">
   <h1 style="font-size: 36px; margin-bottom: 10px; color: #f4a825;">Restoproyect</h1>
   <p style="font-size: 16px; color: #cccccc;">Tu sistema gastronómico todo en uno: pedidos, cocina, stock y más.</p>
 </header>
-
 
 <div class="grid">
   <div class="card">
@@ -104,28 +100,182 @@
     <p>Integra a tus repartidores, automatiza costos de envío y valida coberturas desde la misma plataforma.</p>
   </div>
 </div>
-
-
-<footer style="background-color: #10182F; color: #fff; padding: 60px 20px;">
+<section style="padding: 40px 20px; background: #fff;">
+  <h2 style="text-align:center; font-size: 28px; color: #333;">Planes</h2>
+  <p style="text-align:center; max-width: 700px; margin: 10px auto 40px; font-size: 16px; color: #444;">
+    ¡Todos nuestros planes incluyen <strong>POS, Tienda en línea, App de meseros, comandas e inventarios</strong>,
+    sin límites de usuarios, mesas, cajas ni productos! 😍
+  </p>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+    <div style="background:#f8f8f8; border-radius:10px; padding:30px; width:300px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+      <h3>Inicial</h3>
+      <p style="font-size: 26px; color: #2f54eb;"><strong>$69,900</strong><span style="font-size: 16px;">/mes</span></p>
+      <p style="color:#444;">$209,700 por 3 meses<br>hasta 800 tickets POS / mes / PDV</p>
+      <a href="#" style="background:#d62828; color:white; text-decoration:none; padding:10px 20px; border-radius:5px;">PROBAR GRATIS</a>
+    </div>
+    <div style="background:#f8f8f8; border-radius:10px; padding:30px; width:300px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+      <h3>Pro</h3>
+      <p style="font-size: 26px; color: #2f54eb;"><strong>$109,900</strong><span style="font-size: 16px;">/mes</span></p>
+      <p style="color:#444;">$329,700 por 3 meses<br>hasta 2,000 tickets POS / mes / PDV</p>
+      <a href="#" style="background:#d62828; color:white; text-decoration:none; padding:10px 20px; border-radius:5px;">PROBAR GRATIS</a>
+    </div>
+    <div style="background:#f8f8f8; border-radius:10px; padding:30px; width:300px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+      <h3>Premium</h3>
+      <p style="font-size: 26px; color: #2f54eb;"><strong>0.25%</strong><span style="font-size: 16px;"> de ventas netas</span></p>
+      <p style="color:#444;">min. $250,000 x PDV<br>Sin límites</p>
+      <a href="#" style="background:#d62828; color:white; text-decoration:none; padding:10px 20px; border-radius:5px;">PROBAR GRATIS</a>
+    </div>
+  </div>
+</section>
+  <section style="padding: 20px 20px 60px; background: #fff;">
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+    <div style="width:300px;">
+      <ul style="list-style: none; padding: 0; color: #333;">
+        <li>✔️ POS</li>
+        <li>✔️ Tienda en línea</li>
+        <li>✔️ Menú digital y QR</li>
+        <li>✔️ App móvil meseros</li>
+        <li>✔️ Facturación Electrónica <small>(por paquetes de documentos)</small></li>
+        <li>✔️ Cajas</li>
+        <li>✔️ Mesas</li>
+        <li>✔️ Mostrador / Autoservicio</li>
+        <li>✔️ Domicilios</li>
+      </ul>
+    </div>
+    <div style="width:300px;">
+      <ul style="list-style: none; padding: 0; color: #333;">
+        <li>✔️ Todo lo de Plan Inicial +</li>
+        <li>✔️ Inteligencia artificial ✨<br><small>Asistente IA por chat</small></li>
+        <li>✔️ Sub-recetas</li>
+        <li>✔️ Producciones</li>
+        <li>✔️ Personalizar tienda online</li>
+        <li>✔️ Dominio de tienda propio</li>
+        <li>✔️ API y Webhooks</li>
+      </ul>
+    </div>
+    <div style="width:300px;">
+      <ul style="list-style: none; padding: 0; color: #333;">
+        <li>✔️ Todo lo de Plan Inicial + Pro</li>
+        <li>✔️ Facturación electrónica ilimitada</li>
+        <li>✔️ Transferencia de Stock</li>
+        <li>✔️ Central de domicilios<br><small>Ingreso desde una central</small></li>
+        <li>✔️ App de Repartidores</li>
+        <li>✔️ Logística avanzada</li>
+        <li>✔️ Agente de cuenta<br><small>WhatsApp y llamadas todos los días</small></li>
+      </ul>
+    </div>
+  </div>
+</section>
+  <section style="padding: 40px 20px; background: #fff;">
+  <div style="max-width: 900px; margin: auto;">
+    <details style="border: 1px solid #ccc; border-radius: 10px; padding: 15px; background: #3f3c4c; color: white;">
+      <summary style="cursor: pointer; font-size: 16px;"><strong>＋ Ver todas las Funcionalidades</strong></summary>
+      <div style="background: #fff; color: #333; margin-top: 15px; border-radius: 10px; padding: 20px;">
+        <p>Todo los planes de Restoproyect incluyen herramientas esenciales para impulsar el crecimiento de tu restaurante desde el primer día:</p>
+        <ul style="columns: 2; list-style: none; padding-left: 0;">
+          <li>✔️ Inteligencia Artificial generativa optimizada para Restaurantes ✨ (Pro)</li>
+          <li>✔️ POS electrónico</li>
+          <li>✔️ Tienda en línea</li>
+          <li>✔️ Menú digital y QR</li>
+          <li>✔️ Pedidos mesa, mostrador y delivery</li>
+          <li>✔️ Facturación electrónica</li>
+          <li>✔️ Auto generar FE por QR</li>
+          <li>✔️ Facturación POS</li>
+          <li>✔️ Precuenta</li>
+          <li>✔️ Inventario</li>
+          <li>✔️ AI para optimización de Stock ✨</li>
+          <li>✔️ Recetas</li>
+          <li>✔️ Subrecetas</li>
+          <li>✔️ Producción</li>
+          <li>✔️ Gastos y egresos</li>
+          <li>✔️ Compras</li>
+          <li>✔️ Soporte múltiples puntos de venta / Restaurantes</li>
+          <li>✔️ Usuarios ilimitados</li>
+          <li>✔️ Mesas ilimitadas</li>
+          <li>✔️ Productos ilimitados</li>
+          <li>✔️ Comandas ilimitadas</li>
+          <li>✔️ Cajas ilimitadas</li>
+          <li>✔️ Arqueos de caja</li>
+          <li>✔️ Comandas digitales (KDS)</li>
+          <li>✔️ Zonas de comandas ilimitadas</li>
+          <li>✔️ Caja de domicilios</li>
+          <li>✔️ App móvil meseros</li>
+          <li>✔️ App móvil repartidores (módulo adicional)</li>
+          <li>✔️ Domicilios</li>
+          <li>✔️ Central de domicilios</li>
+          <li>✔️ Zonas de cobertura</li>
+          <li>✔️ Autoservicio / mostrador</li>
+          <li>✔️ Reportes avanzados</li>
+          <li>✔️ Pagos en línea</li>
+          <li>✔️ Cálculo automático valor domicilio ruta</li>
+          <li>✔️ Rutas inteligentes de domicilios</li>
+          <li>✔️ Promociones segmentadas</li>
+          <li>✔️ Tracking de domicilios</li>
+          <li>✔️ Dominio de tienda online propio</li>
+          <li>✔️ Multi-marca</li>
+          <li>✔️ Sesiones / pantallas abiertas ilimitadas</li>
+          <li>✔️ Cocina oculta</li>
+          <li>✔️ Copias de seguridad en la nube</li>
+        </ul>
+      </div>
+    </details>
+  </div>
+</section>
+  <section style="padding: 60px 20px; background: #fff;">
+  <div style="max-width: 1000px; margin: auto;">
+    <h2 style="text-align:center; font-size: 28px; color: #1a1a1a;">Preguntas Frecuentes</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Qué necesito para empezar?</summary>
+        <p style="padding: 10px 0;">Solo necesitás un dispositivo con conexión a internet. Nosotros te guiamos en la configuración inicial.</p>
+      </details>
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Por qué no cobran comisiones?</summary>
+        <p style="padding: 10px 0;">Porque tu tienda es tuya. No intermediamos en tu facturación ni cobramos por transacción.</p>
+      </details>
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Funciona para varios puntos de venta?</summary>
+        <p style="padding: 10px 0;">Sí, podés gestionar múltiples sucursales desde un solo panel de administración.</p>
+      </details>
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Quién se encarga de entregar los domicilios?</summary>
+        <p style="padding: 10px 0;">Podés usar repartidores propios o integrarte con servicios externos desde nuestra app.</p>
+      </details>
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Puedo operar con varias marcas?</summary>
+        <p style="padding: 10px 0;">Sí, Restoproyect te permite gestionar múltiples marcas desde una sola cuenta.</p>
+      </details>
+      <details style="border-bottom: 1px solid #ccc;">
+        <summary style="font-size: 16px; cursor: pointer; padding: 10px 0; font-weight: bold;">¿Quién cobra los pedidos?</summary>
+        <p style="padding: 10px 0;">Los cobros van directo a tu cuenta. Restoproyect no interfiere en tu facturación.</p>
+      </details>
+    </div>
+  </div>
+</section>
+  <footer style="background-color: #003366; color: #f4f4f4; padding: 60px 20px;">
+  <div style="text-align: center; margin-bottom: 40px;">
+    <h2 style="color: #f4a825; font-size: 28px;">BISTROSOFT</h2>
+  </div>
   <div style="max-width: 1000px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-between; text-align: left;">
     <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
       <h3 style="color: #f4a825;">Buenos Aires</h3>
-      <p>Rio Hondo 200<br>Buenos Aires, Argentina</p>
+      <p style="color: #ffffff;">Rio Hondo 200<br>Buenos Aires, Argentina</p>
     </div>
     <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
       <h3 style="color: #f4a825;">Email</h3>
-      <p>hola@restosoft.com</p>
+      <p style="color: #ffffff;">hola@restosoft.com</p>
       <h3 style="color: #f4a825; margin-top: 20px;">Teléfono</h3>
-      <p>+54 11 6586 3900</p>
+      <p style="color: #ffffff;">+54 11 6586 3900</p>
     </div>
     <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
       <h3 style="color: #f4a825;">Productos</h3>
-      <p>POS</p>
-      <p>Tienda en Línea</p>
-      <p>Auto Servicio</p>
+      <p style="color: #ffffff;">POS</p>
+      <p style="color: #ffffff;">Tienda en Línea</p>
+      <p style="color: #ffffff;">Auto Servicio</p>
     </div>
   </div>
 </footer>
+  &copy; 2025 Restoproyect. Todos los derechos reservados.
 
 
 </body>
