--- a/index.html
+++ b/index.html
@@ -68,8 +68,25 @@
   <h1 style="font-size: 36px; margin-bottom: 10px; color: #f4a825;">Restoproyect</h1>
   <p style="font-size: 16px; color: #cccccc;">Tu sistema gastronómico todo en uno: pedidos, cocina, stock y más.</p>
 </header>
-
-<div class="grid">
+<!-- Encabezado animado para Restoproyect -->
+<section style="background-color: #f5f6fa; padding: 60px 20px 40px; text-align: center;">
+  <h2 style="font-size: 14px; color: #555; text-transform: uppercase;">POS PARA RESTAURANTES, BARES Y CAFÉS</h2>
+  <h1 style="font-size: 42px; font-weight: bold; color: #0f1a2b; margin: 20px 0;">
+    Transforma tu Restaurante en una<br>máquina de ventas
+  </h1>
+  <h2 style="font-size: 36px; font-weight: bold; color: #2f54eb;" id="animatedText">Tienda Online</h2>
+  <p style="max-width: 700px; margin: 20px auto 30px; font-size: 16px; color: #333;">
+    Automatiza pedidos, controla inventario y toma decisiones inteligentes con IA. Tu POS para potenciar el negocio.
+  </p>
+</section>
+<script>
+  const frases = ["Tienda Online", "App de Meseros", "Inventario Inteligente", "Factura Electrónica", "Delivery"];
+  let i = 0;
+  setInterval(() => {
+    document.getElementById("animatedText").textContent = frases[i];
+    i = (i + 1) % frases.length;
+  }, 2000);
+</script><div class="grid">
   <div class="card">
     <div class="icon">📦</div>
     <h3>POS</h3>
